--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "chimee": "^0.9.2",
     "chimee-helper-utils": "^0.2.1",
     "chimee-player": "^1.2.2",
@@ -19,7 +20,6 @@
     "js-cookie": "^2.2.0",
     "toxic-predicate-functions": "^0.1.5",
     "vue": "^2.4.2",
-    "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
     "vue2-animate": "^1.0.4",
     "vuex": "^2.4.0"
