--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,16 @@
     }],
     "stage-0"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [
+    "transform-runtime",
+    [
+      "component",
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]
+  ],
   "env": {
     "test": {
       "presets": ["env", "stage-0"],
