--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,15 @@
 {
   "presets": [
-    "vue-app",
     ["env", {
       "modules": false,
       "targets": {
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
     }],
-    "stage-0"
+    "stage-2"
   ],
   "plugins": [
+    "transform-vue-jsx",
     "transform-runtime",
     [
       "component",
@@ -18,11 +18,5 @@
         "styleLibraryName": "theme-chalk"
       }
     ]
-  ],
-  "env": {
-    "test": {
-      "presets": ["env", "stage-0"],
-      "plugins": ["istanbul"]
-    }
-  }
+  ]
 }
