--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
@@ -19,6 +18,7 @@
     "es6-promise": "^4.2.4",
     "jwt-decode": "^2.2.0",
     "koa": "^2.3.0",
+    "long": "^4.0.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.2.0",
     "nuxt": "^1.4.0",
