--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --fix --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/pwa": "^2.0.8",
     "chimee-player": "https://github.com/geeeger/chimee-player/archive/1.4.9.tar.gz",
+    "defer-promise": "^1.0.1",
     "es6-promise": "^4.2.4",
     "jwt-decode": "^2.2.0",
     "koa": "^2.3.0",
@@ -23,7 +24,7 @@
     "material-icons": "^0.2.0",
     "nuxt": "^1.4.0",
     "universal-cookie": "^2.1.2",
-    "vuetify": "^0.17.3",
+    "vuetify": "^1.0.16",
     "vuetify-toast": "^0.1.0"
   },
   "devDependencies": {
