[update] profile & preview

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "chimee-player": "https://github.com/geeeger/chimee-player/archive/1.4.9.tar.gz",
     "defer-promise": "^1.0.1",
     "es6-promise": "^4.2.4",
+    "hls.js": "^0.11.0",
     "jwt-decode": "^2.2.0",
     "koa": "^2.3.0",
     "long": "^4.0.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.2.0",
     "md5": "^2.2.1",
+    "mediaelement": "^4.2.9",
     "nuxt": "^1.4.0",
     "universal-cookie": "^2.1.2",
     "vue-infinite-scroll": "^2.0.2",
